--- a/src/styles/_syntax-highlighting.scss
+++ b/src/styles/_syntax-highlighting.scss
@@ -11,19 +11,23 @@ code {
 }
 
 pre {
-  border-radius: 3px;
   background-color: #1E2A39;
   padding: 2rem;
   overflow-x: auto;
   position: relative;
   margin-right: -2rem;
   margin-left: -3rem;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
   font-size: large;
+  display: flex;
+  justify-content: center;
+
   @include desktop {
-    padding-left: 16rem;
     margin-left: -51vw;
     left: 50%;
   }
+
 
   > code {
     color: #ebeef2;
