--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -909,6 +909,12 @@ footer .navigation .horizontal-list {
   }
 }
 
+@media (min-width: 1700px) {
+  .text-container {
+    padding: 4rem 28rem 3rem 23rem;
+  }
+}
+
 .text-container h1, .text-container h2, .text-container h3 {
   color: #FFFFFF;
   padding-bottom: 1.5rem;
@@ -1013,19 +1019,25 @@ code {
 }
 
 pre {
-  border-radius: 3px;
   background-color: #1E2A39;
   padding: 2rem;
   overflow-x: auto;
   position: relative;
   margin-right: -2rem;
   margin-left: -3rem;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
   font-size: large;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @media (min-width: 1160px) {
   pre {
-    padding-left: 16rem;
     margin-left: -51vw;
     left: 50%;
   }
